--- a/flower-style.css
+++ b/flower-style.css
@@ -2,6 +2,16 @@ header div img{
     background-color: white;
 }
 
+header div nav a{
+    color: grey;
+    text-decoration: none;
+}
+
+button{
+    background-color: red;
+    border-radius: 8px;
+}
+
 .links{
     display: flex;
     background-color: white;
